--- a/MAAT/MAAT.vcxproj.filters
+++ b/MAAT/MAAT.vcxproj.filters
@@ -7,8 +7,14 @@
     <Filter Include="MAAT\Events">
       <UniqueIdentifier>{CC5CA3F3-3812-1CE9-C106-16C02DBB12ED}</UniqueIdentifier>
     </Filter>
+    <Filter Include="MAAT\ImGui">
+      <UniqueIdentifier>{12A94FB2-FE60-91FF-6768-6A5B533F2CF0}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Platform">
       <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\OpenGL">
+      <UniqueIdentifier>{1E7D2C1D-8A08-9AE1-9319-1DD6FF23F6E1}</UniqueIdentifier>
     </Filter>
     <Filter Include="Platform\Windows">
       <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
@@ -37,6 +43,9 @@
     <ClInclude Include="src\MAAT\Events\MouseEvent.h">
       <Filter>MAAT\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\MAAT\ImGui\ImGuiLayer.h">
+      <Filter>MAAT\ImGui</Filter>
+    </ClInclude>
     <ClInclude Include="src\MAAT\Layer.h">
       <Filter>MAAT</Filter>
     </ClInclude>
@@ -49,6 +58,9 @@
     <ClInclude Include="src\MAAT\Window.h">
       <Filter>MAAT</Filter>
     </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
       <Filter>Platform\Windows</Filter>
     </ClInclude>
@@ -58,6 +70,9 @@
     <ClCompile Include="src\MAAT\Application.cpp">
       <Filter>MAAT</Filter>
     </ClCompile>
+    <ClCompile Include="src\MAAT\ImGui\ImGuiLayer.cpp">
+      <Filter>MAAT\ImGui</Filter>
+    </ClCompile>
     <ClCompile Include="src\MAAT\Layer.cpp">
       <Filter>MAAT</Filter>
     </ClCompile>
@@ -66,6 +81,9 @@
     </ClCompile>
     <ClCompile Include="src\MAAT\Log.cpp">
       <Filter>MAAT</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
+      <Filter>Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
       <Filter>Platform\Windows</Filter>
