--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
+Pos=1230,38
+Size=333,756
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][ImGui Demo]
 Pos=685,24
@@ -14,7 +15,56 @@ Size=456,674
 Collapsed=0
 
 [Window][Example: Log]
-Pos=60,60
-Size=500,400
+Pos=270,796
+Size=1293,128
 Collapsed=0
+DockId=0x00000006,0
+
+[Window][DockSpace Demo]
+Pos=0,19
+Size=1563,905
+Collapsed=0
+
+[Window][Example: Console]
+Pos=-22,456
+Size=1280,216
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Example: Simple layout]
+Pos=38,12
+Size=500,440
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=0,38
+Size=268,886
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Example: Documents]
+ViewportPos=146,169
+ViewportId=0x1FD64BEB
+Size=607,944
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=288,59
+Size=485,414
+Collapsed=0
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Docking][Data]
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=64,99 Size=1563,886 Split=X
+  DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=268,682 Selected=0xE7652686
+  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=1010,682 Split=Y
+    DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=1280,571 Split=Y
+      DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1280,483 Split=X
+        DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1955,701 CentralNode=1
+        DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=333,701 Selected=0xE87781F4
+      DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1280,216 Selected=0xDE6E0C33
+    DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=1280,128 Selected=0xDBFE1153
 
