Updated from DLL to Static Library and also removed some warnings.

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1230,38
-Size=333,756
+Pos=818,23
+Size=387,338
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][ImGui Demo]
 Pos=685,24
@@ -15,14 +14,14 @@ Size=456,674
 Collapsed=0
 
 [Window][Example: Log]
-Pos=270,796
-Size=1293,128
+Pos=373,828
+Size=1798,229
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][DockSpace Demo]
 Pos=0,19
-Size=1563,905
+Size=2560,1038
 Collapsed=0
 
 [Window][Example: Console]
@@ -32,25 +31,49 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Example: Simple layout]
-Pos=38,12
-Size=500,440
-Collapsed=0
-
-[Window][Example: Property editor]
 Pos=0,38
-Size=268,886
+Size=371,518
 Collapsed=0
 DockId=0x00000007,0
 
-[Window][Example: Documents]
-ViewportPos=146,169
-ViewportId=0x1FD64BEB
-Size=607,944
+[Window][Example: Property editor]
+Pos=2173,38
+Size=387,257
 Collapsed=0
+DockId=0x0000000C,0
+
+[Window][Example: Documents]
+Pos=0,558
+Size=371,499
+Collapsed=0
+DockId=0x00000008,0
 
 [Window][Example: Custom rendering]
-Pos=288,59
-Size=485,414
+Pos=2173,637
+Size=387,420
+Collapsed=0
+DockId=0x0000000D,0
+
+[Window][Same title as another window##1]
+Pos=100,200
+Size=174,90
+Collapsed=0
+DockId=0x0000000B,0
+
+[Window][Same title as another window##2]
+Pos=100,300
+Size=247,48
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=100,200
+Size=174,90
+Collapsed=0
+DockId=0x0000000B,1
+
+[Window][Test]
+Pos=60,60
+Size=246,95
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
@@ -58,13 +81,18 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=64,99 Size=1563,886 Split=X
-  DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=268,682 Selected=0xE7652686
-  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=1010,682 Split=Y
-    DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=1280,571 Split=Y
-      DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1280,483 Split=X
-        DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1955,701 CentralNode=1
-        DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=333,701 Selected=0xE87781F4
-      DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1280,216 Selected=0xDE6E0C33
-    DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=1280,128 Selected=0xDBFE1153
+DockNode          ID=0x0000000B Pos=100,223 Size=174,90 Selected=0x3727FC6C
+DockSpace         ID=0x3BC79352 Pos=0,61 Size=2560,1019 Split=X
+  DockNode        ID=0x00000009 Parent=0x3BC79352 SizeRef=371,1019 Split=Y Selected=0x08F8367F
+    DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=371,518 Selected=0x08F8367F
+    DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=371,499 Selected=0xAE1DCC2C
+  DockNode        ID=0x0000000A Parent=0x3BC79352 SizeRef=2187,1019 Split=X
+    DockNode      ID=0x00000001 Parent=0x0000000A SizeRef=1798,1019 Split=Y
+      DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=2560,788 Split=Y
+        DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1280,483 CentralNode=1
+        DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1280,216 Selected=0xDE6E0C33
+      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=2560,229 Selected=0xDBFE1153
+    DockNode      ID=0x00000002 Parent=0x0000000A SizeRef=387,1019 Split=Y Selected=0xE7652686
+      DockNode    ID=0x0000000C Parent=0x00000002 SizeRef=387,257 Selected=0xE7652686
+      DockNode    ID=0x0000000D Parent=0x00000002 SizeRef=387,760 Selected=0xE1FDE0B9
 
