Created first triangle.

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=818,23
+ViewportPos=1997,473
+ViewportId=0xE927CF2F
 Size=387,338
 Collapsed=0
 
