Added OpenGL shader.

--- a/MAAT/MAAT.vcxproj
+++ b/MAAT/MAAT.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="src\MAAT\Log.h" />
     <ClInclude Include="src\MAAT\MouseButtonCodes.h" />
     <ClInclude Include="src\MAAT\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\MAAT\Renderer\Shader.h" />
     <ClInclude Include="src\MAAT\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
@@ -585,6 +586,7 @@
     <ClCompile Include="src\MAAT\Layer.cpp" />
     <ClCompile Include="src\MAAT\LayerStack.cpp" />
     <ClCompile Include="src\MAAT\Log.cpp" />
+    <ClCompile Include="src\MAAT\Renderer\Shader.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
@@ -606,4 +608,4 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
-</Project>
+</Project> 
