--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1997,473
-ViewportId=0xE927CF2F
-Size=387,338
+Pos=1060,14
+Size=206,469
 Collapsed=0
 
 [Window][ImGui Demo]
