Added Renderer API abstraction. Created Buffer and Renderer classes.

--- a/MAAT/MAAT.vcxproj.filters
+++ b/MAAT/MAAT.vcxproj.filters
@@ -93,7 +93,13 @@
     <ClInclude Include="src\MAAT\MouseButtonCodes.h">
       <Filter>src\MAAT</Filter>
     </ClInclude>
+    <ClInclude Include="src\MAAT\Renderer\Buffer.h">
+      <Filter>src\MAAT\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\MAAT\Renderer\GraphicsContext.h">
+      <Filter>src\MAAT\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MAAT\Renderer\Renderer.h">
       <Filter>src\MAAT\Renderer</Filter>
     </ClInclude>
     <ClInclude Include="src\MAAT\Renderer\Shader.h">
@@ -101,6 +107,9 @@
     </ClInclude>
     <ClInclude Include="src\MAAT\Window.h">
       <Filter>src\MAAT</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h">
+      <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h">
       <Filter>src\Platform\OpenGL</Filter>
@@ -1382,8 +1391,17 @@
     <ClCompile Include="src\MAAT\Log.cpp">
       <Filter>src\MAAT</Filter>
     </ClCompile>
+    <ClCompile Include="src\MAAT\Renderer\Buffer.cpp">
+      <Filter>src\MAAT\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\MAAT\Renderer\Renderer.cpp">
+      <Filter>src\MAAT\Renderer</Filter>
+    </ClCompile>
     <ClCompile Include="src\MAAT\Renderer\Shader.cpp">
       <Filter>src\MAAT\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp">
       <Filter>src\Platform\OpenGL</Filter>
