--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -20,8 +20,9 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][DockSpace Demo]
-Pos=0,19
-Size=2560,1038
+ViewportPos=495,251
+ViewportId=0x4647B76E
+Size=1280,720
 Collapsed=0
 
 [Window][Example: Console]
@@ -76,13 +77,18 @@ Pos=60,60
 Size=246,95
 Collapsed=0
 
+[Window][Dear ImGui Debug Log]
+Pos=158,372
+Size=708,156
+Collapsed=0
+
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
 DockNode          ID=0x0000000B Pos=100,223 Size=174,90 Selected=0x3727FC6C
-DockSpace         ID=0x3BC79352 Pos=0,61 Size=2560,1019 Split=X
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=495,289 Size=1280,682 Split=X
   DockNode        ID=0x00000009 Parent=0x3BC79352 SizeRef=371,1019 Split=Y Selected=0x08F8367F
     DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=371,518 Selected=0x08F8367F
     DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=371,499 Selected=0xAE1DCC2C
