--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1060,14
+Pos=1051,17
 Size=206,469
 Collapsed=0
 
@@ -86,9 +86,15 @@ Collapsed=0
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0x64418101,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
 [Docking][Data]
 DockNode          ID=0x0000000B Pos=100,223 Size=174,90 Selected=0x3727FC6C
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=495,289 Size=1280,682 Split=X
+DockSpace         ID=0x3BC79352 Pos=495,289 Size=1280,682 Split=X
   DockNode        ID=0x00000009 Parent=0x3BC79352 SizeRef=371,1019 Split=Y Selected=0x08F8367F
     DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=371,518 Selected=0x08F8367F
     DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=371,499 Selected=0xAE1DCC2C
