Added RendererAPI and Submission.

--- a/MAAT/MAAT.vcxproj
+++ b/MAAT/MAAT.vcxproj
@@ -157,12 +157,15 @@
     <ClInclude Include="src\MAAT\MouseButtonCodes.h" />
     <ClInclude Include="src\MAAT\Renderer\Buffer.h" />
     <ClInclude Include="src\MAAT\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\MAAT\Renderer\RenderCommand.h" />
     <ClInclude Include="src\MAAT\Renderer\Renderer.h" />
+    <ClInclude Include="src\MAAT\Renderer\RendererAPI.h" />
     <ClInclude Include="src\MAAT\Renderer\Shader.h" />
     <ClInclude Include="src\MAAT\Renderer\VertexArray.h" />
     <ClInclude Include="src\MAAT\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
@@ -592,11 +595,14 @@
     <ClCompile Include="src\MAAT\LayerStack.cpp" />
     <ClCompile Include="src\MAAT\Log.cpp" />
     <ClCompile Include="src\MAAT\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\MAAT\Renderer\RenderCommandcpp.cpp" />
     <ClCompile Include="src\MAAT\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\MAAT\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\MAAT\Renderer\Shader.cpp" />
     <ClCompile Include="src\MAAT\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
