--- a/MAAT/MAAT.vcxproj
+++ b/MAAT/MAAT.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="src\MAAT\MouseButtonCodes.h" />
     <ClInclude Include="src\MAAT\Renderer\Buffer.h" />
     <ClInclude Include="src\MAAT\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\MAAT\Renderer\OrthographicCamera.h" />
     <ClInclude Include="src\MAAT\Renderer\RenderCommand.h" />
     <ClInclude Include="src\MAAT\Renderer\Renderer.h" />
     <ClInclude Include="src\MAAT\Renderer\RendererAPI.h" />
@@ -595,6 +596,7 @@
     <ClCompile Include="src\MAAT\LayerStack.cpp" />
     <ClCompile Include="src\MAAT\Log.cpp" />
     <ClCompile Include="src\MAAT\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\MAAT\Renderer\OrthographicCamera.cpp" />
     <ClCompile Include="src\MAAT\Renderer\RenderCommandcpp.cpp" />
     <ClCompile Include="src\MAAT\Renderer\Renderer.cpp" />
     <ClCompile Include="src\MAAT\Renderer\RendererAPI.cpp" />
