Added Delta Time.

--- a/MAAT/MAAT.vcxproj
+++ b/MAAT/MAAT.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="src\MAAT.h" />
     <ClInclude Include="src\MAAT\Application.h" />
     <ClInclude Include="src\MAAT\Core.h" />
+    <ClInclude Include="src\MAAT\Core\Timestep.h" />
     <ClInclude Include="src\MAAT\EntryPoint.h" />
     <ClInclude Include="src\MAAT\Events\ApplicationEvent.h" />
     <ClInclude Include="src\MAAT\Events\Event.h" />
@@ -626,4 +627,4 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
-</Project>
+</Project> 
