Abstracted shader/uniforms and added colour picker.

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -82,6 +82,11 @@ Pos=158,372
 Size=708,156
 Collapsed=0
 
+[Window][Settings]
+Pos=60,60
+Size=384,65
+Collapsed=0
+
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
