Added Orthographic Camera Controller.

--- a/MAAT/MAAT.vcxproj
+++ b/MAAT/MAAT.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="src\MAAT\LayerStack.h" />
     <ClInclude Include="src\MAAT\Log.h" />
     <ClInclude Include="src\MAAT\MouseButtonCodes.h" />
+    <ClInclude Include="src\MAAT\OrthographicCameraController.h" />
     <ClInclude Include="src\MAAT\Renderer\Buffer.h" />
     <ClInclude Include="src\MAAT\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\MAAT\Renderer\OrthographicCamera.h" />
@@ -600,6 +601,7 @@
     <ClCompile Include="src\MAAT\Layer.cpp" />
     <ClCompile Include="src\MAAT\LayerStack.cpp" />
     <ClCompile Include="src\MAAT\Log.cpp" />
+    <ClCompile Include="src\MAAT\OrthographicCameraController.cpp" />
     <ClCompile Include="src\MAAT\Renderer\Buffer.cpp" />
     <ClCompile Include="src\MAAT\Renderer\OrthographicCamera.cpp" />
     <ClCompile Include="src\MAAT\Renderer\RenderCommandcpp.cpp" />
@@ -635,4 +637,4 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
-</Project>
+</Project> 
