--- a/MAAT/MAAT.vcxproj
+++ b/MAAT/MAAT.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|x64">
       <Configuration>Debug</Configuration>
@@ -19,26 +19,26 @@
     <IgnoreWarnCompileDuplicatedFilename>true</IgnoreWarnCompileDuplicatedFilename>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>MAAT</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Dist|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -141,32 +141,32 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\MAAT.h" />
-    <ClInclude Include="src\MAAT\Application.h" />
-    <ClInclude Include="src\MAAT\Core.h" />
+    <ClInclude Include="src\MAAT\Core\Application.h" />
+    <ClInclude Include="src\MAAT\Core\Core.h" />
+    <ClInclude Include="src\MAAT\Core\EntryPoint.h" />
+    <ClInclude Include="src\MAAT\Core\Input.h" />
+    <ClInclude Include="src\MAAT\Core\KeyCodes.h" />
+    <ClInclude Include="src\MAAT\Core\Layer.h" />
+    <ClInclude Include="src\MAAT\Core\LayerStack.h" />
+    <ClInclude Include="src\MAAT\Core\Log.h" />
+    <ClInclude Include="src\MAAT\Core\MouseButtonCodes.h" />
     <ClInclude Include="src\MAAT\Core\Timestep.h" />
-    <ClInclude Include="src\MAAT\EntryPoint.h" />
+    <ClInclude Include="src\MAAT\Core\Window.h" />
     <ClInclude Include="src\MAAT\Events\ApplicationEvent.h" />
     <ClInclude Include="src\MAAT\Events\Event.h" />
     <ClInclude Include="src\MAAT\Events\KeyEvent.h" />
     <ClInclude Include="src\MAAT\Events\MouseEvent.h" />
     <ClInclude Include="src\MAAT\ImGui\ImGuiLayer.h" />
-    <ClInclude Include="src\MAAT\Input.h" />
-    <ClInclude Include="src\MAAT\KeyCodes.h" />
-    <ClInclude Include="src\MAAT\Layer.h" />
-    <ClInclude Include="src\MAAT\LayerStack.h" />
-    <ClInclude Include="src\MAAT\Log.h" />
-    <ClInclude Include="src\MAAT\MouseButtonCodes.h" />
-    <ClInclude Include="src\MAAT\OrthographicCameraController.h" />
     <ClInclude Include="src\MAAT\Renderer\Buffer.h" />
     <ClInclude Include="src\MAAT\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\MAAT\Renderer\OrthographicCamera.h" />
+    <ClInclude Include="src\MAAT\Renderer\OrthographicCameraController.h" />
     <ClInclude Include="src\MAAT\Renderer\RenderCommand.h" />
     <ClInclude Include="src\MAAT\Renderer\Renderer.h" />
     <ClInclude Include="src\MAAT\Renderer\RendererAPI.h" />
     <ClInclude Include="src\MAAT\Renderer\Shader.h" />
     <ClInclude Include="src\MAAT\Renderer\Texture.h" />
     <ClInclude Include="src\MAAT\Renderer\VertexArray.h" />
-    <ClInclude Include="src\MAAT\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
@@ -595,15 +595,15 @@
     <ClInclude Include="vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\MAAT\Application.cpp" />
+    <ClCompile Include="src\MAAT\Core\Application.cpp" />
+    <ClCompile Include="src\MAAT\Core\Layer.cpp" />
+    <ClCompile Include="src\MAAT\Core\LayerStack.cpp" />
+    <ClCompile Include="src\MAAT\Core\Log.cpp" />
     <ClCompile Include="src\MAAT\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\MAAT\ImGui\ImGuiLayer.cpp" />
-    <ClCompile Include="src\MAAT\Layer.cpp" />
-    <ClCompile Include="src\MAAT\LayerStack.cpp" />
-    <ClCompile Include="src\MAAT\Log.cpp" />
-    <ClCompile Include="src\MAAT\OrthographicCameraController.cpp" />
     <ClCompile Include="src\MAAT\Renderer\Buffer.cpp" />
     <ClCompile Include="src\MAAT\Renderer\OrthographicCamera.cpp" />
+    <ClCompile Include="src\MAAT\Renderer\OrthographicCameraController.cpp" />
     <ClCompile Include="src\MAAT\Renderer\RenderCommandcpp.cpp" />
     <ClCompile Include="src\MAAT\Renderer\Renderer.cpp" />
     <ClCompile Include="src\MAAT\Renderer\RendererAPI.cpp" />
