--- a/MAAT/MAAT.vcxproj.filters
+++ b/MAAT/MAAT.vcxproj.filters
@@ -57,17 +57,38 @@
     <ClInclude Include="src\MAAT.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\MAAT\Application.h">
-      <Filter>src\MAAT</Filter>
+    <ClInclude Include="src\MAAT\Core\Application.h">
+      <Filter>src\MAAT\Core</Filter>
     </ClInclude>
-    <ClInclude Include="src\MAAT\Core.h">
-      <Filter>src\MAAT</Filter>
+    <ClInclude Include="src\MAAT\Core\Core.h">
+      <Filter>src\MAAT\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MAAT\Core\EntryPoint.h">
+      <Filter>src\MAAT\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MAAT\Core\Input.h">
+      <Filter>src\MAAT\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MAAT\Core\KeyCodes.h">
+      <Filter>src\MAAT\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MAAT\Core\Layer.h">
+      <Filter>src\MAAT\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MAAT\Core\LayerStack.h">
+      <Filter>src\MAAT\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MAAT\Core\Log.h">
+      <Filter>src\MAAT\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MAAT\Core\MouseButtonCodes.h">
+      <Filter>src\MAAT\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\MAAT\Core\Timestep.h">
       <Filter>src\MAAT\Core</Filter>
     </ClInclude>
-    <ClInclude Include="src\MAAT\EntryPoint.h">
-      <Filter>src\MAAT</Filter>
+    <ClInclude Include="src\MAAT\Core\Window.h">
+      <Filter>src\MAAT\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\MAAT\Events\ApplicationEvent.h">
       <Filter>src\MAAT\Events</Filter>
@@ -84,27 +105,6 @@
     <ClInclude Include="src\MAAT\ImGui\ImGuiLayer.h">
       <Filter>src\MAAT\ImGui</Filter>
     </ClInclude>
-    <ClInclude Include="src\MAAT\Input.h">
-      <Filter>src\MAAT</Filter>
-    </ClInclude>
-    <ClInclude Include="src\MAAT\KeyCodes.h">
-      <Filter>src\MAAT</Filter>
-    </ClInclude>
-    <ClInclude Include="src\MAAT\Layer.h">
-      <Filter>src\MAAT</Filter>
-    </ClInclude>
-    <ClInclude Include="src\MAAT\LayerStack.h">
-      <Filter>src\MAAT</Filter>
-    </ClInclude>
-    <ClInclude Include="src\MAAT\Log.h">
-      <Filter>src\MAAT</Filter>
-    </ClInclude>
-    <ClInclude Include="src\MAAT\MouseButtonCodes.h">
-      <Filter>src\MAAT</Filter>
-    </ClInclude>
-    <ClInclude Include="src\MAAT\OrthographicCameraController.h">
-      <Filter>src\MAAT</Filter>
-    </ClInclude>
     <ClInclude Include="src\MAAT\Renderer\Buffer.h">
       <Filter>src\MAAT\Renderer</Filter>
     </ClInclude>
@@ -112,6 +112,9 @@
       <Filter>src\MAAT\Renderer</Filter>
     </ClInclude>
     <ClInclude Include="src\MAAT\Renderer\OrthographicCamera.h">
+      <Filter>src\MAAT\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MAAT\Renderer\OrthographicCameraController.h">
       <Filter>src\MAAT\Renderer</Filter>
     </ClInclude>
     <ClInclude Include="src\MAAT\Renderer\RenderCommand.h">
@@ -131,9 +134,6 @@
     </ClInclude>
     <ClInclude Include="src\MAAT\Renderer\VertexArray.h">
       <Filter>src\MAAT\Renderer</Filter>
-    </ClInclude>
-    <ClInclude Include="src\MAAT\Window.h">
-      <Filter>src\MAAT</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h">
       <Filter>src\Platform\OpenGL</Filter>
@@ -1415,8 +1415,17 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\MAAT\Application.cpp">
-      <Filter>src\MAAT</Filter>
+    <ClCompile Include="src\MAAT\Core\Application.cpp">
+      <Filter>src\MAAT\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="src\MAAT\Core\Layer.cpp">
+      <Filter>src\MAAT\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="src\MAAT\Core\LayerStack.cpp">
+      <Filter>src\MAAT\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="src\MAAT\Core\Log.cpp">
+      <Filter>src\MAAT\Core</Filter>
     </ClCompile>
     <ClCompile Include="src\MAAT\ImGui\ImGuiBuild.cpp">
       <Filter>src\MAAT\ImGui</Filter>
@@ -1424,22 +1433,13 @@
     <ClCompile Include="src\MAAT\ImGui\ImGuiLayer.cpp">
       <Filter>src\MAAT\ImGui</Filter>
     </ClCompile>
-    <ClCompile Include="src\MAAT\Layer.cpp">
-      <Filter>src\MAAT</Filter>
-    </ClCompile>
-    <ClCompile Include="src\MAAT\LayerStack.cpp">
-      <Filter>src\MAAT</Filter>
-    </ClCompile>
-    <ClCompile Include="src\MAAT\Log.cpp">
-      <Filter>src\MAAT</Filter>
-    </ClCompile>
-    <ClCompile Include="src\MAAT\OrthographicCameraController.cpp">
-      <Filter>src\MAAT</Filter>
-    </ClCompile>
     <ClCompile Include="src\MAAT\Renderer\Buffer.cpp">
       <Filter>src\MAAT\Renderer</Filter>
     </ClCompile>
     <ClCompile Include="src\MAAT\Renderer\OrthographicCamera.cpp">
+      <Filter>src\MAAT\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\MAAT\Renderer\OrthographicCameraController.cpp">
       <Filter>src\MAAT\Renderer</Filter>
     </ClCompile>
     <ClCompile Include="src\MAAT\Renderer\RenderCommandcpp.cpp">
