--- a/MAAT/MAAT.vcxproj
+++ b/MAAT/MAAT.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="src\MAAT\Renderer\OrthographicCameraController.h" />
     <ClInclude Include="src\MAAT\Renderer\RenderCommand.h" />
     <ClInclude Include="src\MAAT\Renderer\Renderer.h" />
+    <ClInclude Include="src\MAAT\Renderer\Renderer2D.h" />
     <ClInclude Include="src\MAAT\Renderer\RendererAPI.h" />
     <ClInclude Include="src\MAAT\Renderer\Shader.h" />
     <ClInclude Include="src\MAAT\Renderer\Texture.h" />
@@ -606,6 +607,7 @@
     <ClCompile Include="src\MAAT\Renderer\OrthographicCameraController.cpp" />
     <ClCompile Include="src\MAAT\Renderer\RenderCommandcpp.cpp" />
     <ClCompile Include="src\MAAT\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\MAAT\Renderer\Renderer2D.cpp" />
     <ClCompile Include="src\MAAT\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\MAAT\Renderer\Shader.cpp" />
     <ClCompile Include="src\MAAT\Renderer\Texture.cpp" />
@@ -637,4 +639,4 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
-</Project>
+</Project> 
