Added basic visual profiling.

--- a/MAAT/MAAT.vcxproj
+++ b/MAAT/MAAT.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="src\MAAT\Core\MouseButtonCodes.h" />
     <ClInclude Include="src\MAAT\Core\Timestep.h" />
     <ClInclude Include="src\MAAT\Core\Window.h" />
+    <ClInclude Include="src\MAAT\Debug\Instrumentor.h" />
     <ClInclude Include="src\MAAT\Events\ApplicationEvent.h" />
     <ClInclude Include="src\MAAT\Events\Event.h" />
     <ClInclude Include="src\MAAT\Events\KeyEvent.h" />
@@ -639,4 +640,4 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
-</Project>
+</Project> 
